[gd_scene load_steps=5 format=3 uid="uid://cd1outpbyiwci"]

[ext_resource type="Script" path="res://levels/level_2.gd" id="1_448kf"]
[ext_resource type="PackedScene" uid="uid://c8qn3lrqbo70d" path="res://levels/level2/player.tscn" id="1_g8nrv"]
[ext_resource type="PackedScene" path="res://levels/level2/pine_tree.tscn" id="2_5hw7o"]

[sub_resource type="Curve2D" id="Curve2D_d2rrc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -343, -238, 0, 0, 0, 0, 1888, -238, 0, 0, 0, 0, 1885, 1102, 0, 0, 0, 0, 804, 1092.62, 0, 0, 0, 0, -343, 1095, 0, 0, 0, 0, -343, -238)
}
point_count = 6

[node name="Level2" type="Node"]
script = ExtResource("1_448kf")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1.61238e-06, 0.549889, 9.62615e-07, 1)

[node name="Player" parent="." instance=ExtResource("1_g8nrv")]
position = Vector2(640, 360)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-800, -428.525)
scale = Vector2(1, 0.964179)
curve = SubResource("Curve2D_d2rrc")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
position = Vector2(-343, -238)

[node name="Label" type="Label" parent="Player"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -360.0
offset_right = 20.0
offset_bottom = -315.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32

[node name="Trees" type="Node" parent="."]

[node name="StaticBody2D" parent="Trees" instance=ExtResource("2_5hw7o")]
position = Vector2(246, 249)

[node name="StaticBody2D2" parent="Trees" instance=ExtResource("2_5hw7o")]
position = Vector2(312, 524)

[node name="StaticBody2D3" parent="Trees" instance=ExtResource("2_5hw7o")]
position = Vector2(995, 255)

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="WinTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
